// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="sc-jnlKLf iTDaaZ"
  >
    <span
      class="sc-jDwBTQ fawSKE"
      title="Test.Error: Test error description"
    >
      <i
        class="sc-iQKALj fRureQ fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-kpOJdX dcjZxn"
  >
    <div
      class="sc-dxgOiQ YDkMG"
    >
      <div
        class="sc-ckVGcZ hWXbch"
      >
        <div
          class="sc-kEYyzF sc-iAyFgw cCgybq"
        >
          ERROR
        </div>
        <h4
          class="sc-brqgnP ghTbFe"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-jKJlTe loXQau"
      >
        <pre
          class="sc-jAaTju jVGCzW"
          data-testid="cypherFrameErrorMessage"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-hMqMXs ensEbq"
      >
        <a
          class="sc-eNQAEJ lmdVTE"
        >
          <i
            class="sc-ibxdXY iunAzW fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-kpOJdX dcjZxn"
  >
    <div
      class="sc-dxgOiQ YDkMG"
    >
      <div
        class="sc-ckVGcZ hWXbch"
      >
        <div
          class="sc-kEYyzF sc-iAyFgw cCgybq"
        >
          ERROR
        </div>
        <h4
          class="sc-brqgnP ghTbFe"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-jKJlTe loXQau"
      >
        <pre
          class="sc-jAaTju jVGCzW"
          data-testid="cypherFrameErrorMessage"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
